DROP TABLE Employee CASCADE CONSTRAINTS;
DROP TABLE "Employee/Facility" CASCADE CONSTRAINTS;
DROP TABLE "Employee/Ship" CASCADE CONSTRAINTS;
DROP TABLE Client CASCADE CONSTRAINTS;
DROP TABLE Ship CASCADE CONSTRAINTS;
DROP TABLE Container CASCADE CONSTRAINTS;
DROP TABLE Truck CASCADE CONSTRAINTS;
DROP TABLE PositionalMessage CASCADE CONSTRAINTS;
DROP TABLE "Truck/Employee" CASCADE CONSTRAINTS;
DROP TABLE ContainerPosition CASCADE CONSTRAINTS;
DROP TABLE ISOCode CASCADE CONSTRAINTS;
DROP TABLE Role CASCADE CONSTRAINTS;
DROP TABLE Port CASCADE CONSTRAINTS;
DROP TABLE Warehouse CASCADE CONSTRAINTS;
DROP TABLE Continent CASCADE CONSTRAINTS;
DROP TABLE Country CASCADE CONSTRAINTS;
DROP TABLE "Container / Client" CASCADE CONSTRAINTS;
DROP TABLE Facility CASCADE CONSTRAINTS;
DROP TABLE Transporter CASCADE CONSTRAINTS;
DROP TABLE CargoManifest CASCADE CONSTRAINTS;
DROP TABLE "CargoManifest Container" CASCADE CONSTRAINTS;
DROP TABLE "Facility / Truck" CASCADE CONSTRAINTS;
DROP TABLE "Facility / Ship" CASCADE CONSTRAINTS;
